--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   equatable: ^2.0.5
   dartz: ^0.10.1
   firebase_auth: ^5.2.0
+  firebase_core: ^3.4.0
 
 dev_dependencies:
   flutter_test:
