--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_auth: ^5.2.0
   firebase_core: ^3.4.0
   cloud_firestore: ^5.4.0
+  device_preview: ^1.1.0
 
 dev_dependencies:
   flutter_test:
